--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,16 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Prevent infinite loop
+        if: github.actor == 'github-actions[bot]'
+        run: |
+          echo "Triggered by github-actions[bot]; exiting to avoid loop."
+          exit 0
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to gh-pages branch
+      - name: Deploy to main branch (publish to Pages source)
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
-          publish_branch: gh-pages
+          publish_branch: main
           user_name: github-actions
           user_email: github-actions@github.com
           keep_files: false
+          exclude_assets: .github
 
